MyWork/networkpolicy.yml
```yaml
# Assume pods have these labels:
#
# Frontend pod:
# labels:
#   app: frontend
#
# Backend pod:
# labels:
#   app: backend

# Allow frontend pods to communicate with backend pods

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-to-backend
  namespace: my-prod

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
```
